--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Samples</title>
+    <link rel="stylesheet" href="css/style.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
 
-    <div class="accordeon">
+    <div class="accordion">
       <h2 class="accordeonHeader">Mussum Forevis</h2>
 
       <p class="accordeonBody">
